1/26/11 add atoms to model
1/26/11 add image files for atoms
1/25/11 check in images of individual atoms to assets directory, provided by KL 
1/11/11 show smiley face in "Balance Equation" module when equation is balanced
1/11/11 allow size of boxes to vary by instance, since Game will require larger boxes
1/11/11 add stubs for Game model and canvas
1/11/11 add control for choosing the visual representation of "balanced"
1/11/11 add boxes that show molecules corresponding to equation coefficients
1/11/11 add "balanced with lowest coefficients" to model
1/10/11 debug node to indicate whether equation is balanced
1/10/11 display equations, editable and read-only
1/10/11 add Reset All button, wired up to model
1/10/11 add control for selecting equation
1/10/11 create model for "Balance Equation" tab
1/10/11 create stubs for canvases
1/10/11 create English strings file based on design doc
1/10/11 created balancing-chemical-equations project skeleton